# BernsteinPolynomialUtil

./: CMakeLists.txt  README.md
bernstein_polynomial/: bernstein_util.cpp  bernstein_util.hpp
cmake/: cmake_uninstall.cmake.in
math_util/: math_util.cpp  math_util.hpp
